k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: logservice
  template:
    metadata:
      labels:
        app: logservice
    spec:
      containers:
        - name: logservice
          image: logservice:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
            - containerPort: 50051

          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
