k8s/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: logservice
spec:
  type: NodePort
  selector: 
    app: logservice
  ports:
    - name : http
      port : 80
      targetPort: 8080
      nodePort: 30007
      
    - name : grpc
      port : 50051
      targetPort: 50051
      nodePort: 30008
