k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logservice-ingress
spec:
  rules:
    - host: logservice
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logservice
                port:
                  number: 80
